--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <jackson.version>2.9.9</jackson.version>
         <junit.version>4.11</junit.version>
+        <mockito.version>3.4.6</mockito.version>
     </properties>
 
     <dependencies>
@@ -45,6 +46,12 @@
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
         </dependency>
 
     </dependencies>
