--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,19 @@
     <groupId>zaibacu</groupId>
     <artifactId>java-graphql-client</artifactId>
     <version>1.0</version>
+    <packaging>jar</packaging>
+
+    <licenses>
+        <license>
+            <name>MIT</name>
+            <url>https://mit-license.org/</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <scm>
+        <url>https://github.com/zaibacu/java-graphql-client.git</url>
+    </scm>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
