--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,18 @@
         <url>https://github.com/zaibacu/java-graphql-client.git</url>
     </scm>
 
+    <scm>
+
+        <connection>https://github.com/zaibacu/java-graphql-client.git</connection>
+
+        <developerConnection>git@github.com:zaibacu/java-graphql-client.git</developerConnection>
+
+        <url>https://github.com/zaibacu/java-graphql-client</url>
+
+        <tag>HEAD</tag>
+
+    </scm>
+
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
