--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.zaibacu</groupId>
     <artifactId>java-graphql-client</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>jar</packaging>
 
     <licenses>
@@ -21,7 +19,7 @@
         <connection>scm:git:git://github.com/zaibacu/java-graphql-client.git</connection>
         <developerConnection>scm:git:git@github.com:zaibacu/java-graphql-client.git</developerConnection>
         <url>https://github.com/zaibacu/java-graphql-client</url>
-        <tag>HEAD</tag>
+        <tag>java-graphql-client-1.0</tag>
     </scm>
 
     <properties>
